--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -26,7 +26,7 @@
             </li>
             <li class="sidebar-menu-item">
                 <span class="menu-icon">➕</span>
-                <span><a href="{{ path('app_creation_cotisation') }}" style="color: #fff; text-decoration: none;">Créer une cotisation</a></span>
+                <span><a href="{{ path('app_cotisation_new') }}" style="color: #fff; text-decoration: none;">Créer une cotisation</a></span>
             </li>
             <li class="sidebar-menu-item">
                 <span class="menu-icon">👥</span>
