--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -30,7 +30,7 @@
             </li>
             <li class="sidebar-menu-item">
                 <span class="menu-icon">👥</span>
-                <span><a href="#" style="color: #fff; text-decoration: none;">Mes  cotisations</a></span>
+                <span><a href="{{ path('app_cotisation_index') }}" style="color: #fff; text-decoration: none;">Mes  cotisations</a></span>
             </li>
             <li class="sidebar-menu-item">
                 <span class="menu-icon">📊</span>
